Update-udemy-title index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="navbar_s1">
 
-            <h1 class="navbar_s1_title"><span1 style="color:#A435F0;">Û</span1>demy</h1>
+            <img src="./images/udemy1.png" style="height: 41px;" class="navbar_s1_title">
         </div>
 
         <div class="navbar_s2">
