hover property added

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <div class="course-card">
                 <img src="./images/take2.jpg">
-                <h3>Machine learning</h3>
+                <h3>Mern stack</h3>
                 <p>Arunkumar</p>
                 <p>4.9⭐⭐⭐⭐⭐</p>
                 <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del> 40% off</p>
@@ -171,7 +171,7 @@
 
             <div class="course-card">
                 <img src="./images/take5.jpg">
-                <h3>Python</h3>
+                <h3>Mean stack</h3>
                 <p>Arunkumar</p>
                 <p>3.9⭐⭐⭐</p>
                 <p> <i class="fa-solid fa-indian-rupee-sign"></i> 449 <del style="color: palevioletred;"> 1500</del> 70% off</p>
