updated nav bar

--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
         <div class="navbar_s2">
 
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" placeholder="search for anithing, tech, cource, etc...">
+            <input type="text" placeholder="search for anything, tech, cource, etc...">
         </div>
 
         <div class="navbar_s3">
 
             <p>Courses</p>
-            <p>My learning</p>
+            <!--p>My learning</p> -->
+             <div class="my-learning">
+                <P>My learning</P>
+                <div class="my-learning-popup">
+                    <p>You did not purchase anything yet</p>
+                </div>
+             </div>
+
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
@@ -54,6 +61,12 @@
     <!--sale image-->
     <div class="sale-image">
         <img src="./images/section-image.jpg">
+    </div>
+
+    <div class="sale-offer">
+        <h2>Udemy Flash sale 24 hours to save</h2>
+        <p>Get the top courses for judt 499, Just one day to save but a lifetime to learn.... !!Hurry Up!! - !!Don't miss it!!</p>
+
     </div>
 
     <!--cource card-->
