--- a/index.html
+++ b/index.html
@@ -32,18 +32,23 @@
 
             <p>Courses</p>
             <!--p>My learning</p> -->
-             <div class="my-learning">
+            <div class="my-learning">
                 <P>My learning</P>
                 <div class="my-learning-popup">
                     <p>You did not purchase anything yet</p>
                 </div>
-             </div>
+            </div>
 
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
 
         </div>
+
+        <div class="navbar_s4">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
     </div>
     <!--catogories-->
     <div class="catogories">
@@ -65,7 +70,8 @@
 
     <div class="sale-offer">
         <h2>Udemy Flash sale 24 hours to save</h2>
-        <p>Get the top courses for judt 499, Just one day to save but a lifetime to learn.... !!Hurry Up!! - !!Don't miss it!!</p>
+        <p>Get the top courses for judt 499, Just one day to save but a lifetime to learn.... !!Hurry Up!! - !!Don't
+            miss it!!</p>
 
     </div>
 
@@ -81,7 +87,8 @@
                 <h3>Css master class</h3>
                 <p>Kumutha </p>
                 <p>4.1⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 349 <del style="color: palevioletred;"> 1000</del> 70%</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 349 <del style="color: palevioletred;"> 1000</del> 70%
+                </p>
             </div>
 
             <div class="course-card">
@@ -89,7 +96,8 @@
                 <h3>Front End Master class</h3>
                 <p>Arunkumar</p>
                 <p>3.9⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 449 <del style="color: palevioletred;"> 1500</del> 60%</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 449 <del style="color: palevioletred;"> 1500</del> 60%
+                </p>
             </div>
 
             <div class="course-card">
@@ -97,7 +105,8 @@
                 <h3>Full Stack</h3>
                 <p>Arunkumar</p>
                 <p>4.9⭐⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del> 40%</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del>
+                    40%</p>
             </div>
 
             <div class="course-card">
@@ -105,7 +114,8 @@
                 <h3>Dev_ops</h3>
                 <p>Kutty</p>
                 <p>4.4⭐⭐⭐⭐</p>
-                <h4> <i class="fa-solid fa-indian-rupee-sign"></i> 500 <del style="color: palevioletred;"> 1900</del> 20%</h4>
+                <h4> <i class="fa-solid fa-indian-rupee-sign"></i> 500 <del style="color: palevioletred;"> 1900</del>
+                    20%</h4>
             </div>
 
         </div>
@@ -146,7 +156,8 @@
                 <h3>Deep learning</h3>
                 <p>Kumutha </p>
                 <p>4.1⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 349 <del style="color: palevioletred;"> 1000</del> 30% off</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 349 <del style="color: palevioletred;"> 1000</del> 30%
+                    off</p>
             </div>
 
             <div class="course-card">
@@ -154,7 +165,8 @@
                 <h3>Machine learning</h3>
                 <p>Arunkumar</p>
                 <p>4.9⭐⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del> 80% off</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del>
+                    80% off</p>
             </div>
 
 
@@ -163,7 +175,8 @@
                 <h3>Mern stack</h3>
                 <p>Arunkumar</p>
                 <p>4.9⭐⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del> 40% off</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del>
+                    40% off</p>
             </div>
 
             <div class="course-card">
@@ -171,7 +184,8 @@
                 <h3>Data science</h3>
                 <p>Kutty</p>
                 <p>4.4⭐⭐⭐⭐</p>
-                <h4> <i class="fa-solid fa-indian-rupee-sign"></i> 500 <del style="color: palevioletred;"> 1900</del> 30% off</h4>
+                <h4> <i class="fa-solid fa-indian-rupee-sign"></i> 500 <del style="color: palevioletred;"> 1900</del>
+                    30% off</h4>
             </div>
 
             <div class="course-card">
@@ -179,7 +193,8 @@
                 <h3>Python</h3>
                 <p>Kumutha </p>
                 <p>4.1⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 349 <del style="color: palevioletred;"> 1000</del> 60% off</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 349 <del style="color: palevioletred;"> 1000</del> 60%
+                    off</p>
             </div>
 
             <div class="course-card">
@@ -187,7 +202,8 @@
                 <h3>Mean stack</h3>
                 <p>Arunkumar</p>
                 <p>3.9⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 449 <del style="color: palevioletred;"> 1500</del> 70% off</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 449 <del style="color: palevioletred;"> 1500</del> 70%
+                    off</p>
             </div>
 
             <div class="course-card">
@@ -195,7 +211,8 @@
                 <h3>Data Structures</h3>
                 <p>Arunkumar</p>
                 <p>4.9⭐⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del> 10% off</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i> 10000 <del style="color: palevioletred;"> 18000</del>
+                    10% off</p>
             </div>
 
             <div class="course-card">
@@ -203,13 +220,14 @@
                 <h3>Ruby</h3>
                 <p>Kutty</p>
                 <p>4.4⭐⭐⭐⭐</p>
-                <h4> <i class="fa-solid fa-indian-rupee-sign"></i> 500 <del style="color: palevioletred;"> 1900</del> 40% off</h4>
+                <h4> <i class="fa-solid fa-indian-rupee-sign"></i> 500 <del style="color: palevioletred;"> 1900</del>
+                    40% off</h4>
             </div>
 
 
         </div>
     </div>
-        <!--companies-->
+    <!--companies-->
 
     <div class="companies">
 
@@ -217,7 +235,7 @@
             <div class="companies__one-title">
                 <h2>Trusted by over 19000 companies and million of learners around the world</h2>
             </div>
-            
+
 
 
         </div>
